error handling, new cookies, cookie dialog and instructions

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,15 @@
 
 @plugin "tailwindcss-animate";
 
+@plugin 'tailwind-scrollbar';
+
 @custom-variant dark (&:is(.dark *));
+
+html,
+body,
+:root {
+  height: 100%;
+}
 
 body {
   font-family: var(--font-geist-mono);
